map image added, icons for map drop downs added.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center orange-text text-lighten-2">GHOST <img src="skis-and-sticks.png"  id="subHead"> TOWNS</h1>
+        <h1 class="header center orange-text text-lighten-2">SUNSHINE <img src="skis-and-sticks.png"  id="subHead"> DAYDREAM</h1>
         <div class="row center">
-          <h5 class="header col s12 orange-text text-lighten-2">Abandoned resorts - A backcountry guide</h5>
+          <h5 class="header col s12 orange-text text-lighten-2">a backcountry snowpack dashboard</h5>
         </div>
         <!-- <div class="row center">
           <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
@@ -54,9 +54,9 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="fa fa-area-chart" aria-hidden="true"></i></h2>
 
-            <h5 class="center">Calculate Vertical Feet</h5>
+            <h5 class="center">SNOTEL Dashboard</h5>
 
-            <p class="light">See the forces of nature at work reclaiming the infrastrucure and slowly gravitiating back toward reclaimed land.  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+            <p class="light">Accurate in depth updates are available on command. Find which stations are reporting the most snow and which ones are under bluebird skys.</p>
           </div>
         </div>
 
@@ -65,16 +65,16 @@
             <h2 class="center brown-text"><i class="fa fa-map" aria-hidden="true"></i></h2>
             <h5 class="center">Google Maps Plugin</h5>
 
-            <p class="light">We use all of the functionality of google maps with GPS co-ordinates. By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light">Maps display eveything from slope angles about 35% to snowtel stations and radar.  Topographical maps make it simple to plan the next adventure.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="fa fa-tree" aria-hidden="true"></i></h2>
-            <h5 class="center">Overtaken by Nature</h5>
+            <h5 class="center">Save favorites</h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light">We have provided detailed documentation as well as specific code examples to help new </p>
           </div>
         </div>
       </div>
@@ -83,15 +83,31 @@
   </div>
 
 
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
+  <div class="parallax-container">
       <div class="container">
         <div class="row center">
-          <h6 class="header col s12 light">"Though we travel the world over to find the beautiful, we must carry it with us or we find it not"  Ralph Waldo Emerson</h6>
+          <!-- icons  -->
+            <a class="btn-floating btn-large waves-effect waves-light teal lighten-1 tooltipped mapsIcons modal-trigger" data-position="bottom" data-delay="50" data-tooltip="Avalanche Forcast" href="#modal1"><img id="avyImg" src="avalanche.png"></a>
+            <a class="btn-floating btn-large waves-effect waves-light teal lighten-1 tooltipped mapsIcons"  data-position="bottom" data-delay="50" data-tooltip="Slope Angle Maps"><img
+            id="mapImg" src="map.png"></a>
+            <a class="btn-floating btn-large waves-effect waves-light teal lighten-1 tooltipped mapsIcons" id="rightIcon"  data-position="bottom" data-delay="50" data-tooltip="SNOTEL Maps"><img src="snowFlake.png" id="flakeImg"></a>
+
+          <!-- modals -->
+
+          <div id="modal1" class="modal">
+              <div class="modal-content">
+                <h4>Modal Header</h4>
+                <p>A bunch of text</p>
+              </div>
+            <div class="modal-footer">
+              <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+            </div>
+          </div>
+
+
         </div>
       </div>
-    </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="rsz_maps.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container">
@@ -112,13 +128,15 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <img class="menu" src="weatherFlake.png" alt="map"/>
+          <img class="menu" src="winter-hat.png" alt="avy"/>
+          <img class="menu" src="weatherFlake.png" alt="weatherFlake"/>
+          <!-- <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5> -->
         </div>
       </div>
     </div>
     <div class="parallax"><img src="rsz_1ghosttowns6.jpg" alt="Unsplashed background img 3"></div>
   </div>
-
   <footer class="page-footer teal">
     <div class="container">
       <div class="row">
