added first modal w/ iframe

--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
 
           <div id="modal1" class="modal">
               <div class="modal-content">
-                <h4>Modal Header</h4>
-                <p>A bunch of text</p>
+                  <iframe width="800px" height="500px" src="http://caltopo.com/map?id=3028"></iframe>
               </div>
             <div class="modal-footer">
               <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
