floated iframe left in modal

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
 
           <div id="modal1" class="modal">
               <div class="modal-content">
-                  <iframe width="800px" height="500px" src="http://caltopo.com/map?id=3028"></iframe>
+                  <iframe id="slopeMap" src='http://www.hillmap.com/embed/ag1zfmhpbGxtYXAtaGRychULEghTYXZlZE1hcBiAgICI1ZuxCww' style='height: 600px; width: 600px;'></iframe>
+                  <p>Slope angle overlay on map Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
               </div>
             <div class="modal-footer">
               <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
