imbeded iframes in parallax so that maps are immediately veiwable

--- a/journalList.html
+++ b/journalList.html
@@ -20,25 +20,27 @@
               vspace="0" hspace="0">
             <p>Your browser does not support iframes.</p>
         </iframe>
-        <iframe width="500px" height="500px" src="http://caltopo.com/map?id=3028"></iframe>
-        <iframe src='http://www.hillmap.com/embed/ag1zfmhpbGxtYXAtaGRychULEghTYXZlZE1hcBiAgICI1ZuxCww' style='height: 600px; width: 600px;'></iframe>
+        <!-- <iframe width="500px" height="500px" src="http://caltopo.com/map?id=3028"></iframe> -->
+        <iframe src='http://www.hillmap.com/embed/ag1zfmhpbGxtYXAtaGRychULEghTYXZlZE1hcBiAgICI24ybCgw' style='height: 600px; width: 600px;'></iframe>
         <img src="http://avalanche.state.co.us/caic/images/map-danger-scale.png">
     </div>
   <div class="container">
-
-
-  <div class="chip">
-    <img src="sun.png" alt="Contact Person">
-    Jane Doe
+      <div class="chip">
+        <img src="sun.png" alt="Contact Person">
+        Jane Doe
+      </div>
+        <ul>
+          <li>ski tahoe</li>
+          <li>breckenridge</li>
+          <li>florida</li>
+          <li>winter park</li>
+          <li>eldora</li>
+        </ul>
   </div>
-    <ul>
-      <li>ski tahoe</li>
-      <li>breckenridge</li>
-      <li>florida</li>
-      <li>winter park</li>
-      <li>eldora</li>
-    </ul>
+  <div class="container">
+    <button type="submit" name="button" id="searchButton">Click for Gnar</button>
   </div>
+
 
 
 <!--  Scripts-->
