--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class="row center">
           <h5 class="header col s12 orange-text text-lighten-2">a backcountry snowpack dashboard</h5>
         </div>
+
         <!-- <div class="row center">
           <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
         </div> -->
@@ -41,8 +42,30 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="rsz_ghosttowns4.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax" id="mainParallax"><img src="rsz_ghosttowns4.jpg" alt="Unsplashed background img 1"></div>
   </div>
+
+<!--  Danger icon make active only w/ more than 6 inches of snow -->
+
+  <div class="fixed-action-btn horizontal" style="bottom: 15px; right: 15px;">
+    <a class="btn-floating btn-large red">
+    <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+    </a>
+    <ul class="avyWarning">
+      <li>A</li>
+      <li>V</li>
+      <li>Y</li>
+      <li>-</li>
+      <li>D</li>
+      <li>A</li>
+      <li>N</li>
+      <li>G</li>
+      <li>E</li>
+      <li>R</li>
+    </ul>
+  </div>
+
+
 
 
   <div class="container">
@@ -56,7 +79,7 @@
 
             <h5 class="center">SNOTEL Dashboard</h5>
 
-            <p class="light">Accurate in depth updates are available on command. Find which stations are reporting the most snow and which ones are under bluebird skys.</p>
+            <p class="light">Get in depth statitacl analysis from SNOTEL weather stations.   are available on command. Find which stations are reporting the most snow and which ones are under bluebird skys.</p>
           </div>
         </div>
 
@@ -84,20 +107,19 @@
 
 
   <div class="parallax-container">
-      <div class="container">
+      <!-- <div class="container"> -->
         <div class="row center">
           <!-- icons  -->
             <a class="btn-floating btn-large waves-effect waves-light teal lighten-1 tooltipped mapsIcons modal-trigger" data-position="bottom" data-delay="50" data-tooltip="Avalanche Forcast" href="#modal1"><img id="avyImg" src="avalanche.png"></a>
 
             <a class="btn-floating btn-large waves-effect waves-light teal lighten-1 tooltipped mapsIcons" id="rightIcon"  data-position="bottom" data-delay="50" data-tooltip="SNOTEL Maps"><img src="snowFlake.png" id="flakeImg"></a>
-            
+
             <a class="btn-floating btn-large waves-effect waves-light teal lighten-1 tooltipped mapsIcons modal-trigger"  data-position="bottom" data-delay="50" data-tooltip="Slope Angle Maps" href="#modal2"><img
             id="mapImg" src="map.png"></a>
 
-
           <!-- modals -->
 
-          <div id="modal1" class="modal">
+          <!-- <div id="modal1" class="modal">
               <div class="modal-content">
                   <iframe name="caic_fx_map" id="caic_fx_map"
                         src="http://avalanche.state.co.us/caic/fx_map.php"
@@ -112,9 +134,9 @@
             <div class="modal-footer">
               <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
             </div>
-          </div>
+          </div> -->
 
-          <div id="modal2" class="modal">
+          <!-- <div id="modal2" class="modal">
               <div class="modal-content">
                   <iframe id="slopeMap" src='http://www.hillmap.com/embed/ag1zfmhpbGxtYXAtaGRychULEghTYXZlZE1hcBiAgICI1ZuxCww' style='height: 600px; width: 600px;'></iframe>
                   <p>Slope angle overlay on map Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
@@ -122,11 +144,27 @@
             <div class="modal-footer">
               <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
             </div>
-          </div>
-
-
+          </div> -->
         </div>
-      </div>
+        <div class="row">
+          <div class="col s4">
+            <iframe name="caic_fx_map" id="caic_fx_map"
+                  src="http://avalanche.state.co.us/caic/fx_map.php"
+                  width="495px" height="565px"
+                  scrolling="no" marginwidth="0"
+                  marginheight="0" frameborder="0"
+                  vspace="0" hspace="0">
+                <p>Your browser does not support iframes.</p>
+            </iframe>
+          </div>
+          <div class="col s4">
+          </div>
+          <div class="col s4">
+                <iframe id="slopeMap" src='http://www.hillmap.com/embed/ag1zfmhpbGxtYXAtaGRychULEghTYXZlZE1hcBiAgICI1ZvxCgw' frameborder="0" style='height: 555px; width: 495px;'></iframe>
+          </div>
+        </div>
+
+      <!-- </div> -->
     <div class="parallax"><img src="rsz_maps.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
