added 3 dashboard pages and got icons w/ tooltips formatted properly

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <a class="btn-floating btn-large waves-effect waves-light teal lighten-1 tooltipped mapsIcons" id="rightIcon"  data-position="bottom" data-delay="50" data-tooltip="SNOTEL Maps"><img src="snowFlake.png" id="flakeImg"></a>
 
             <a class="btn-floating btn-large waves-effect waves-light teal lighten-1 tooltipped mapsIcons modal-trigger"  data-position="bottom" data-delay="50" data-tooltip="Slope Angle Maps" href="#modal2"><img
-            id="mapImg" src="map.png"></a>
+            id="angleImg" src="angle.png"></a>
 
           <!-- modals -->
 
