--- a/journalList.html
+++ b/journalList.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <html>
 <head>
   <meta charset="UTF-8">
@@ -20,7 +22,7 @@
               vspace="0" hspace="0">
             <p>Your browser does not support iframes.</p>
         </iframe>
-        <!-- <iframe width="500px" height="500px" src="http://caltopo.com/map?id=3028"></iframe> -->
+        <iframe width="500px" height="500px" src="http://caltopo.com/map?id=3028"></iframe> -->
         <iframe src='http://www.hillmap.com/embed/ag1zfmhpbGxtYXAtaGRychULEghTYXZlZE1hcBiAgICI24ybCgw' style='height: 600px; width: 600px;'></iframe>
         <img src="http://avalanche.state.co.us/caic/images/map-danger-scale.png">
     </div>
@@ -39,7 +41,7 @@
   </div>
   <div class="container">
     <button type="submit" name="button" id="searchButton">Click for Gnar</button>
-  </div>
+</div>
 
 
 
