--- a/snotelDash.html
+++ b/snotelDash.html
@@ -16,14 +16,72 @@
 
   <nav>
     <div class="nav-wrapper teal">
-    <a href="index.html" class="brand-logo"><img src="gogglesColor.png" class="tooltipped" data-position="bottom" data-delay="18" data-tooltip="Home"></a>
+    <a href="index.html" class="brand-logo"><img src="gogglesColor.png" class="tooltipped goggsNav" data-position="bottom" data-delay="18" data-tooltip="Home"></a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="badges.html" class="avyNav tooltipped" data-position="bottom" data-delay="15" data-tooltip="CAIC Forecast"><img class="avyNav" src="avalanche.png"></a></li>
-      <li><a href="snotelDash.html" class="tooltipped" data-position="bottom" data-delay="15" data-tooltip="SNOTEL Dashboard"><img class="flakeNav" src="snowFlake.png"></a></li>
-      <li><a href="collapsible.html" class="tooltipped" data-position="bottom" data-delay="15" data-tooltip="Slope Angle Map"><img class="angleNav" src="angle.png"></a></li>
+      <li><a href="avyDash.html" class="avyNav tooltipped" data-position="bottom" data-delay="15" data-tooltip="CAIC Forecast"><img class="avyNav" src="avalanche.png"></a></li>
+      <li class="active"><a href="snotelDash.html" class="tooltipped" data-position="bottom" data-delay="15" data-tooltip="SNOTEL Dashboard"><img class="placeNav" src="placeholder.png"></a></li>
+      <li><a href="slopeDash.html" class="tooltipped" data-position="bottom" data-delay="15" data-tooltip="Slope Angle Map"><img class="mapNav" src="folded-map.png"></a></li>
     </ul>
     </div>
   </nav>
+
+<!-- cards  -->
+<div class="row">
+</div>
+<div class="row">
+</div>
+
+  <div class="row">
+    <div class="col s12 m7">
+      <div class="card">
+        <div class="card-image">
+          <img src="images/sample-1.jpg">
+          <span class="card-title">Card Title</span>
+        </div>
+        <div class="card-content">
+          <p>I am a very simple card. I am good at containing small bits of information.
+          I am convenient because I require little markup to use effectively.</p>
+        </div>
+        <div class="card-action">
+          <a href="#">This is a link</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="page-footer teal">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Sunshine Daydream</h5>
+          <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes.   It is inteded to serve as a tool to provide indepth, multifacited information regarding the current weather conditions and snowpack. Hopefully this information will lead to informed and safe travel decisions in the winter backcountry.</p>
+
+
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Guides</h5>
+          <ul>
+            <li><a class="white-text" href="https://skimap.org/">Vintage Resort Maps</a></li>
+            <li><a class="white-text" href="http://www.frontrangeskimo.com/">Front Range Ski</a></li>
+            <li><a class="white-text" href="https://www.powderproject.com/">Powder Project</a></li>
+          </ul>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Conditions</h5>
+          <ul>
+            <li><a class="white-text" href="https://opensnow.com/">Open Snow</a></li>
+            <li><a class="white-text" href="http://www.onthesnow.com/">On the Snow</a></li>
+            <li><a class="white-text" href="http://avalanche.state.co.us/">CAIC</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      Gnarls von Powderborne  <a class="brown-text text-lighten-3" href="https://www.linkedin.com/in/stephen-hanzlik-14b71b122
+">Stephen Hanzlik</a>
+      </div>
+    </div>
+  </footer>
 
 
 
