--- a/avyDash.html
+++ b/avyDash.html
@@ -1,34 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Avalanche Dashboard</title>
 
-<!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <script src="https://use.fontawesome.com/c638b1f4f4.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
+    <title>Avalanche Dashboard</title>
+
+    <!-- CSS  -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <script src="https://use.fontawesome.com/c638b1f4f4.js"></script>
 </head>
+
 <body>
 
-  <nav>
-    <div class="nav-wrapper teal">
-    <a href="index.html" class="brand-logo"><img src="gogglesColor.png" class="tooltipped" data-position="bottom" data-delay="18" data-tooltip="Home"></a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="badges.html" class="tooltipped" data-position="bottom" data-delay="15" data-tooltip="CAIC Forecast"><img class="avyNav" src="avalanche.png"></a></li>
-      <li><a href="snotelDash.html" class="tooltipped" data-position="bottom" data-delay="15" data-tooltip="SNOTEL Dashboard"><img class="flakeNav" src="snowFlake.png"></a></li>
-      <li><a href="collapsible.html" class="tooltipped" data-position="bottom" data-delay="15" data-tooltip="Slope Angle Map"><img class="angleNav" src="angle.png"></a></li>
-    </ul>
+    <nav>
+        <div class="nav-wrapper teal">
+            <a href="index.html" class="brand-logo"><img src="gogglesColor.png" class="tooltipped goggsNav" data-position="bottom" data-delay="18" data-tooltip="Home"></a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li class="active">
+                    <a href="avyDash.html" class="tooltipped" data-position="bottom" data-delay="15" data-tooltip="CAIC Forecast"><img class="avyNav" src="avalanche.png"></a>
+                </li>
+                <li>
+                    <a href="snotelDash.html" class="tooltipped" data-position="bottom" data-delay="15" data-tooltip="SNOTEL Dashboard"><img class="placeNav" src="placeholder.png"></a>
+                </li>
+                <li>
+                    <a href="slopeDash.html" class="tooltipped" data-position="bottom" data-delay="15" data-tooltip="Slope Angle Map"><img class="mapNav" src="folded-map.png"></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- cards  -->
+    <div class="row">
     </div>
-  </nav>
+    <div class="row">
+    </div>
+    <div class="row">
+        <!-- <div class="container"> -->
+        <div class="col s1">
+        </div>
+        <div class="col s5">
+            <iframe name="caic_fx_map" id="caic_fx_map" src="http://avalanche.state.co.us/caic/fx_map.php" width="495px" height="565px" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" vspace="0" hspace="0">
+              <p>Your browser does not support iframes.</p>
+            </iframe>
+        </div>
+        <div class="col s6">
+
+            <ul class="collapsible popout" data-collapsible="accordion">
+
+                <li>
+                    <div class="collapsible-header active">
+                        <i class="material-icons">filter_drama</i> Backcountry Zones
+                    </div>
+                    <div class="collapsible-body">
+                        <ul class="collection">
+                            <li class="collection-item avatar shrinkZones">
+                                <i class="fa fa-snowflake-o circle red"></i>
+                                <span class="title"><h5>Front Range</h5></span>
+                                <a href="#!" class="secondary-content"><h5>7"</h5></a>
+                            </li>
+                            <li class="collection-item avatar">
+                                <i class="fa fa-snowflake-o circle red"></i>
+                                <span class="title"><h5>Steamboat and the Flattops</h5></span>
+                                <a href="#!" class="secondary-content"><h5>7"</h5></a>
+                            </li>
+                            <li class="collection-item avatar">
+                                <i class="fa fa-snowflake-o circle orange lighten-1"></i>
+                                <span class="title"><h5>Aspen</h5></span>
+                                <a href="#!" class="secondary-content"><h5>8"</h5></a>
+                            </li>
+                            <li class="collection-item avatar">
+                                <i class="fa fa-snowflake-o circle orange lighten-1"></i>
+                                <span class="title"><h5>Vail</h5></span>
+                                <a href="#!" class="secondary-content"><h5>10"</h5></a>
+                            </li>
+                            <li class="collection-item avatar">
+                                <i class="fa fa-snowflake-o circle teal"></i>
+                                <span class="title"><h5>Southern San Jauns</h5></span>
+                                <a href="#!" class="secondary-content"><h5>7"</h5></a>
+                            </li>
+                            <li class="collection-item avatar">
+                                <i class="fa fa-snowflake-o circle teal"></i>
+                                <span class="title"><h5>Northern San Jauns</h5></span>
+                                <a href="#!" class="secondary-content"><h5>7"</h5></a>
+                            </li>
+                            <li class="collection-item avatar">
+                                <i class="fa fa-snowflake-o circle"></i>
+                                <span class="title"><h5>Northern San Jauns</h5></span>
+                                <a href="#!" class="secondary-content"><h5>7"</h5></a>
+                            </li>
+                            <li class="collection-item avatar">
+                                <i class="fa fa-snowflake-o circle"></i>
+                                <span class="title"><h5>Northern San Jauns</h5></span>
+                                <a href="#!" class="secondary-content"><h5>7"</h5></a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <div class="collapsible-header"><i class="material-icons">place</i>SNOTEL Data</div>
+                    <div class="collapsible-body">
+                        <form>
+                          <input type="date" class="datepicker" value="start date">
+                        </form>
+                    </div>
+                </li>
+                <li>
+                    <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+                    <div class="collapsible-body">
+                        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                            anim id est laborum.</p>
+                    </div>
+                </li>
+            </ul>
 
 
+        <!-- </div> -->
+    </div>
+    <div class="row">
+    </div>
 
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+    <footer class="page-footer teal">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Sunshine Daydream</h5>
+                    <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is inteded to serve as a tool to provide indepth, multifacited information regarding the current weather conditions and snowpack. Hopefully this information will lead to
+                        informed and safe travel decisions in the winter backcountry.</p>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Guides</h5>
+                    <ul>
+                        <li><a class="white-text" href="https://skimap.org/">Vintage Resort Maps</a></li>
+                        <li><a class="white-text" href="http://www.frontrangeskimo.com/">Front Range Ski</a></li>
+                        <li><a class="white-text" href="https://www.powderproject.com/">Powder Project</a></li>
+                    </ul>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Conditions</h5>
+                    <ul>
+                        <li><a class="white-text" href="https://opensnow.com/">Open Snow</a></li>
+                        <li><a class="white-text" href="http://www.onthesnow.com/">On the Snow</a></li>
+                        <li><a class="white-text" href="http://avalanche.state.co.us/">CAIC</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                Gnarls von Powderborne <a class="brown-text text-lighten-3" href="https://www.linkedin.com/in/stephen-hanzlik-14b71b122
+">Stephen Hanzlik</a>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.js"></script>
+    <script src="js/init.js"></script>
 </body>
+
 </html>
