--- a/journalList.html
+++ b/journalList.html
@@ -11,8 +11,16 @@
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <script src="https://use.fontawesome.com/c638b1f4f4.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.js"></script>
 </head>
 <body>
+
+<!-- graphing with JSON data -->
+ <canvas id="myChart" width="100" height="100"></canvas>
+
+
+
+<!-- i frames -->
   <div class="container">
         <iframe name="caic_fx_map" id="caic_fx_map"
               src="http://avalanche.state.co.us/caic/fx_map.php"
