have json data rendering to landing page

--- a/index.html
+++ b/index.html
@@ -121,15 +121,18 @@
             </iframe>
           </div>
 <!-- these will ideally render in order of most snow to least -->
-          <div class="col s4 indexFlexBox">
-              <h4 class="indexStats">Eldora</h4>
-              <h4 class="indexStats">7"</h4>
-              <h4 class="indexStats">Berthoud Pass</h4>
-              <h4 class="indexStats">5"</h4>
-              <h4 class="indexStats">Winter Park</h4>
-              <h4 class="indexStats">3"</h4>
-              <h4 class="indexStats">Eldora</h4>
-              <h4 class="indexStats">2"</h4>
+          <div class="col s4 indexFlexBox indexStats">
+              <div>
+                <h5 class="snow1"></h5>
+                <h5 class="snowDepth1 center"></h5>
+                <h5 class="temp1 center"></h5>
+              </div>
+              <div>
+                <h5 class="snow2"></h5>
+                <h5 class="snowDepth2 center"></h5>
+                <h5 class="temp2 center"></h5>
+              </div>
+
           </div>
           <div class="col s4">
                 <iframe id="slopeMap" src='http://www.hillmap.com/embed/ag1zfmhpbGxtYXAtaGRychULEghTYXZlZE1hcBiAgICI1ZvxCgw' frameborder="0" style='height: 555px; width: 495px;'></iframe>
@@ -145,7 +148,7 @@
             class="angleImg" src="folded-map.png"></a>
           </div>
 
-    <div class="parallax"><img src="rsz_maps.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax mapParallax"><img src="rsz_maps.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container">
