--- a/avyDash.html
+++ b/avyDash.html
@@ -53,7 +53,7 @@
 
                 <li>
                     <div class="collapsible-header active">
-                        <i class="material-icons">filter_drama</i> Backcountry Zones
+                        <i class="fa fa-tree"></i> Backcountry Zones
                     </div>
                     <div class="collapsible-body">
                         <ul class="collection">
@@ -101,7 +101,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="collapsible-header"><i class="material-icons">place</i>SNOTEL Data</div>
+                    <div class="collapsible-header"><i class="fa fa-building"></i>Inbound Resorts</div>
                     <div class="collapsible-body">
                         <form>
                           <input type="date" class="datepicker" value="start date">
@@ -109,7 +109,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+                    <div class="collapsible-header"><i class="fa fa-bar-chart"></i>Graphs and Data</div>
                     <div class="collapsible-body">
                         <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                             aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
