got graph to render anual snow data

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <script src="https://use.fontawesome.com/c638b1f4f4.js"></script>
+  <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/modules/exporting.js"></script>
 </head>
 <body>
   <!-- <nav class="grey lighten-1" role="navigation">
@@ -32,7 +34,7 @@
         <br><br>
         <h1 class="header center orange-text text-lighten-2">SUNSHINE <img src="skis-and-sticks.png"  id="subHead"> DAYDREAM</h1>
         <div class="row center">
-          <h5 class="header col s12 orange-text text-lighten-2">a backcountry snowpack dashboard</h5>
+          <h5 class="header col s12 orange-text text-lighten-2">a backcountry snow and weather app</h5>
         </div>
 
         <!-- <div class="row center">
@@ -131,6 +133,16 @@
                 <h5 class="snow2"></h5>
                 <h5 class="snowDepth2 center"></h5>
                 <h5 class="temp2 center"></h5>
+              </div>
+              <div>
+                <h5 class="snow3"></h5>
+                <h5 class="snowDepth3 center"></h5>
+                <h5 class="temp3 center"></h5>
+              </div>
+              <div>
+                <h5 class="snow4"></h5>
+                <h5 class="snowDepth4 center"></h5>
+                <h5 class="temp4 center"></h5>
               </div>
 
           </div>
