--- a/journalList.html
+++ b/journalList.html
@@ -16,8 +16,11 @@
 <body>
 
 <!-- graphing with JSON data -->
- <canvas id="myChart" width="100" height="100"></canvas>
 
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+
+<div id="container" style="min-width: 200px; height: 300px;  width: 800px; margin: 0 auto"></div>
 
 
 <!-- i frames -->
@@ -49,7 +52,7 @@
   </div>
   <div class="container">
     <button type="submit" name="button" id="searchButton">Click for Gnar</button>
-</div>
+  </div>
 
 
 
@@ -57,5 +60,6 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
+  <script src="https://code.highcharts.com"></script>
 </body>
 </html>
