--- a/avyDash.html
+++ b/avyDash.html
@@ -19,6 +19,7 @@
     <nav>
         <div class="nav-wrapper teal">
             <a href="index.html" class="brand-logo"><img src="gogglesColor.png" class="tooltipped goggsNav" data-position="bottom" data-delay="18" data-tooltip="Home"></a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li class="active">
                     <a href="avyDash.html" class="tooltipped" data-position="bottom" data-delay="15" data-tooltip="CAIC Forecast"><img class="avyNav" src="avalanche.png"></a>
@@ -31,6 +32,11 @@
                 </li>
             </ul>
         </div>
+        <ul class="side-nav" id="mobile-demo">
+          <li><a href="avyDash.html">CAIC Forecast</a></li>
+          <li><a href="snotelDash.html">SNOTEL Dashboard</a></li>
+          <li><a href="slopeDash.html">Slop Angle Dashboard</a></li>
+        </ul>
     </nav>
 
     <!-- cards  -->
@@ -104,7 +110,7 @@
                     <div class="collapsible-header"><i class="fa fa-building"></i>Inbound Resorts</div>
                     <div class="collapsible-body">
                         <form>
-                          <input type="date" class="datepicker" value="start date">
+                            <input type="date" class="datepicker" value="start date">
                         </form>
                     </div>
                 </li>
@@ -119,48 +125,48 @@
             </ul>
 
 
-        <!-- </div> -->
-    </div>
-    <div class="row">
-    </div>
-
-    <footer class="page-footer teal">
-        <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text">Sunshine Daydream</h5>
-                    <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is inteded to serve as a tool to provide indepth, multifacited information regarding the current weather conditions and snowpack. Hopefully this information will lead to
-                        informed and safe travel decisions in the winter backcountry.</p>
-                </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">Guides</h5>
-                    <ul>
-                        <li><a class="white-text" href="https://skimap.org/">Vintage Resort Maps</a></li>
-                        <li><a class="white-text" href="http://www.frontrangeskimo.com/">Front Range Ski</a></li>
-                        <li><a class="white-text" href="https://www.powderproject.com/">Powder Project</a></li>
-                    </ul>
-                </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">Conditions</h5>
-                    <ul>
-                        <li><a class="white-text" href="https://opensnow.com/">Open Snow</a></li>
-                        <li><a class="white-text" href="http://www.onthesnow.com/">On the Snow</a></li>
-                        <li><a class="white-text" href="http://avalanche.state.co.us/">CAIC</a></li>
-                    </ul>
-                </div>
-            </div>
+            <!-- </div> -->
         </div>
-        <div class="footer-copyright">
+        <div class="row">
+        </div>
+
+        <footer class="page-footer teal">
             <div class="container">
-                Gnarls von Powderborne <a class="brown-text text-lighten-3" href="https://www.linkedin.com/in/stephen-hanzlik-14b71b122
-">Stephen Hanzlik</a>
+                <div class="row">
+                    <div class="col l6 s12">
+                        <h5 class="white-text">Sunshine Daydream</h5>
+                        <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is inteded to serve as a tool to provide indepth, multifacited information regarding the current weather conditions and snowpack. Hopefully this information will lead
+                            to informed and safe travel decisions in the winter backcountry.</p>
+                    </div>
+                    <div class="col l3 s12">
+                        <h5 class="white-text">Guides</h5>
+                        <ul>
+                            <li><a class="white-text" href="https://skimap.org/">Vintage Resort Maps</a></li>
+                            <li><a class="white-text" href="http://www.frontrangeskimo.com/">Front Range Ski</a></li>
+                            <li><a class="white-text" href="https://www.powderproject.com/">Powder Project</a></li>
+                        </ul>
+                    </div>
+                    <div class="col l3 s12">
+                        <h5 class="white-text">Conditions</h5>
+                        <ul>
+                            <li><a class="white-text" href="https://opensnow.com/">Open Snow</a></li>
+                            <li><a class="white-text" href="http://www.onthesnow.com/">On the Snow</a></li>
+                            <li><a class="white-text" href="http://avalanche.state.co.us/">CAIC</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
-    </footer>
+            <div class="footer-copyright">
+                <div class="container">
+                    Gnarls von Powderborne <a class="brown-text text-lighten-3" href="https://www.linkedin.com/in/stephen-hanzlik-14b71b122
+">Stephen Hanzlik</a>
+                </div>
+            </div>
+        </footer>
 
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="js/materialize.js"></script>
-    <script src="js/init.js"></script>
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="js/materialize.js"></script>
+        <script src="js/init.js"></script>
 </body>
 
 </html>
