--- a/snotelDash.html
+++ b/snotelDash.html
@@ -1,92 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>SNOTEL Dashboard</title>
 
-<!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <script src="https://use.fontawesome.com/c638b1f4f4.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
+    <title>SNOTEL Dashboard</title>
+
+    <!-- CSS  -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <script src="https://use.fontawesome.com/c638b1f4f4.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
 </head>
+
 <body>
 
-  <nav>
-    <div class="nav-wrapper teal">
-    <a href="index.html" class="brand-logo"><img src="gogglesColor.png" class="tooltipped goggsNav" data-position="bottom" data-delay="18" data-tooltip="Home"></a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="avyDash.html" class="avyNav tooltipped" data-position="bottom" data-delay="15" data-tooltip="CAIC Forecast"><img class="avyNav" src="avalanche.png"></a></li>
-      <li class="active"><a href="snotelDash.html" class="tooltipped" data-position="bottom" data-delay="15" data-tooltip="SNOTEL Dashboard"><img class="placeNav" src="placeholder.png"></a></li>
-      <li><a href="slopeDash.html" class="tooltipped" data-position="bottom" data-delay="15" data-tooltip="Slope Angle Map"><img class="mapNav" src="folded-map.png"></a></li>
-    </ul>
+    <nav>
+        <div class="nav-wrapper teal">
+            <a href="index.html" class="brand-logo"><img src="gogglesColor.png" class="tooltipped goggsNav" data-position="bottom" data-delay="18" data-tooltip="Home"></a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li>
+                    <a href="avyDash.html" class="avyNav tooltipped" data-position="bottom" data-delay="15" data-tooltip="CAIC Forecast"><img class="avyNav" src="avalanche.png"></a>
+                </li>
+                <li class="active">
+                    <a href="snotelDash.html" class="tooltipped" data-position="bottom" data-delay="15" data-tooltip="SNOTEL Dashboard"><img class="placeNav" src="placeholder.png"></a>
+                </li>
+                <li>
+                    <a href="slopeDash.html" class="tooltipped" data-position="bottom" data-delay="15" data-tooltip="Slope Angle Map"><img class="mapNav" src="folded-map.png"></a>
+                </li>
+            </ul>
+        </div>
+        <ul class="side-nav" id="mobile-demo">
+            <li><a href="avyDash.html">CAIC Forecast</a></li>
+            <li><a href="snotelDash.html">SNOTEL Dashboard</a></li>
+            <li><a href="slopeDash.html">Slop Angle Dashboard</a></li>
+        </ul>
+    </nav>
+
+    <!-- cards  -->
+    <div class="row">
     </div>
-  </nav>
-
-<!-- cards  -->
-<div class="row">
-</div>
-<div class="row">
-</div>
-
-  <div class="row">
-    <div class="col s12 m7">
-      <div class="card">
-        <div class="card-image">
-          <img src="images/sample-1.jpg">
-          <span class="card-title">Card Title</span>
-        </div>
-        <div class="card-content">
-          <p>I am a very simple card. I am good at containing small bits of information.
-          I am convenient because I require little markup to use effectively.</p>
-        </div>
-        <div class="card-action">
-          <a href="#">This is a link</a>
-        </div>
-      </div>
+    <div class="row">
     </div>
-  </div>
-  <footer class="page-footer teal">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Sunshine Daydream</h5>
-          <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes.   It is inteded to serve as a tool to provide indepth, multifacited information regarding the current weather conditions and snowpack. Hopefully this information will lead to informed and safe travel decisions in the winter backcountry.</p>
 
-
+    <div class="row">
+        <div class="col s12 m7">
+            <div class="card" id="activate">
+                <div class="card-image">
+                    <img src="images/sample-1.jpg">
+                    <span class="card-title">Card Title</span>
+                </div>
+                <div class="card-content">
+                    <div class="container">
+                        <div id="container" style="min-width: 200px; height: 300px;  width: 800px; margin: 0 auto"></div>
+                    </div>
+                </div>
+                <div class="card-action">
+                    <a href="#" >This is a link</a>
+                </div>
+            </div>
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Guides</h5>
-          <ul>
-            <li><a class="white-text" href="https://skimap.org/">Vintage Resort Maps</a></li>
-            <li><a class="white-text" href="http://www.frontrangeskimo.com/">Front Range Ski</a></li>
-            <li><a class="white-text" href="https://www.powderproject.com/">Powder Project</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Conditions</h5>
-          <ul>
-            <li><a class="white-text" href="https://opensnow.com/">Open Snow</a></li>
-            <li><a class="white-text" href="http://www.onthesnow.com/">On the Snow</a></li>
-            <li><a class="white-text" href="http://avalanche.state.co.us/">CAIC</a></li>
-          </ul>
-        </div>
-      </div>
     </div>
-    <div class="footer-copyright">
-      <div class="container">
-      Gnarls von Powderborne  <a class="brown-text text-lighten-3" href="https://www.linkedin.com/in/stephen-hanzlik-14b71b122
+    <footer class="page-footer teal">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Sunshine Daydream</h5>
+                    <p class="grey-text text-lighten-4">This dashboard exists for personal informational purposes. It is inteded to serve as a tool to provide indepth, multifacited information regarding the current weather conditions and snowpack. Hopefully this information will lead to
+                        informed and safe travel decisions in the winter backcountry.</p>
+
+
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Guides</h5>
+                    <ul>
+                        <li><a class="white-text" href="https://skimap.org/">Vintage Resort Maps</a></li>
+                        <li><a class="white-text" href="http://www.frontrangeskimo.com/">Front Range Ski</a></li>
+                        <li><a class="white-text" href="https://www.powderproject.com/">Powder Project</a></li>
+                    </ul>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Conditions</h5>
+                    <ul>
+                        <li><a class="white-text" href="https://opensnow.com/">Open Snow</a></li>
+                        <li><a class="white-text" href="http://www.onthesnow.com/">On the Snow</a></li>
+                        <li><a class="white-text" href="http://avalanche.state.co.us/">CAIC</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                Gnarls von Powderborne <a class="brown-text text-lighten-3" href="https://www.linkedin.com/in/stephen-hanzlik-14b71b122
 ">Stephen Hanzlik</a>
-      </div>
-    </div>
-  </footer>
+            </div>
+        </div>
+    </footer>
 
 
 
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.js"></script>
+    <script src="js/init.js"></script>
+
 </body>
+
 </html>
