--- a/avyDash.html
+++ b/avyDash.html
@@ -55,18 +55,18 @@
         </div>
         <div class="col s6">
 
-            <ul class="collapsible popout" data-collapsible="accordion">
+            <!-- <ul class="collapsible popout" data-collapsible="accordion">
 
                 <li>
                     <div class="collapsible-header active">
                         <i class="fa fa-tree"></i> Backcountry Zones
                     </div>
-                    <div class="collapsible-body">
+                    <div class="collapsible-body"> -->
                         <ul class="collection">
                             <li class="collection-item avatar shrinkZones">
                                 <i class="fa fa-snowflake-o circle red"></i>
                                 <span class="title"><h5>Front Range</h5></span>
-                                <a href="#!" class="secondary-content"><h5>7"</h5></a>
+                                <a href="#!" class="secondary-content"><h5 class="avrgFrontRange">7"</h5></a>
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle red"></i>
@@ -104,10 +104,10 @@
                                 <a href="#!" class="secondary-content"><h5>7"</h5></a>
                             </li>
                         </ul>
-                    </div>
+                    <!-- </div>
                 </li>
-                <li>
-                    <div class="collapsible-header"><i class="fa fa-building"></i>Inbound Resorts</div>
+                <li> -->
+                    <!-- <div class="collapsible-header"><i class="fa fa-building"></i>Inbound Resorts</div>
                     <div class="collapsible-body">
                         <form>
                             <input type="date" class="datepicker" value="start date">
@@ -121,8 +121,8 @@
                             aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
                             anim id est laborum.</p>
                     </div>
-                </li>
-            </ul>
+                </li> -->
+            <!-- </ul> -->
 
 
             <!-- </div> -->
