average tempertature by snotel site appears on graph

--- a/avyDash.html
+++ b/avyDash.html
@@ -70,27 +70,32 @@
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle red"></i>
-                                <span class="title"><h5>Steamboat and the Flattops</h5></span>
+                                <span class="title"><h5>Steamboat and Flat Tops</h5></span>
                                 <a href="#!" class="secondary-content"><h5>7"</h5></a>
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle orange lighten-1"></i>
-                                <span class="title"><h5>Aspen</h5></span>
+                                <span class="title"><h5>Vail and Summit County</h5></span>
                                 <a href="#!" class="secondary-content"><h5>8"</h5></a>
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle orange lighten-1"></i>
-                                <span class="title"><h5>Vail</h5></span>
+                                <span class="title"><h5>Sawatch Range</h5></span>
                                 <a href="#!" class="secondary-content"><h5>10"</h5></a>
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle teal"></i>
-                                <span class="title"><h5>Southern San Jauns</h5></span>
+                                <span class="title"><h5>Aspen</h5></span>
                                 <a href="#!" class="secondary-content"><h5>7"</h5></a>
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle teal"></i>
-                                <span class="title"><h5>Northern San Jauns</h5></span>
+                                <span class="title"><h5>Gunnison</h5></span>
+                                <a href="#!" class="secondary-content"><h5>7"</h5></a>
+                            </li>
+                            <li class="collection-item avatar">
+                                <i class="fa fa-snowflake-o circle"></i>
+                                <span class="title"><h5>Sangre de Cristo</h5></span>
                                 <a href="#!" class="secondary-content"><h5>7"</h5></a>
                             </li>
                             <li class="collection-item avatar">
@@ -100,7 +105,7 @@
                             </li>
                             <li class="collection-item avatar">
                                 <i class="fa fa-snowflake-o circle"></i>
-                                <span class="title"><h5>Northern San Jauns</h5></span>
+                                <span class="title"><h5>Southern San Jauns</h5></span>
                                 <a href="#!" class="secondary-content"><h5>7"</h5></a>
                             </li>
                         </ul>
